<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>sonar-java-custom-rules</artifactId>
    <version>0.0.2</version>

    <packaging>sonar-plugin</packaging>

    <!--  Change the name of the plugin here -->
    <name>SonarQube Java :: Documentation :: Custom Rules</name>

    <!--  Change the description of the plugin here -->
    <description>Java Custom Rules for SonarQube</description>

    <properties>
        <sonar.plugin.api.version>10.2.0.1908</sonar.plugin.api.version>
        <sonar.java.version>7.27.1.33504</sonar.java.version>
        <!-- Don't forget to update this version of JaCoCo -->
        <jacoco.version>0.8.10</jacoco.version>
        <!-- Use UTF-8 for all resources -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Make sure to be compatible with java 11 -->
        <maven.compiler.release>11</maven.compiler.release>
    </properties>

    <dependencies>
        <!-- MAIN sources dependencies -->
        <dependency>
            <groupId>org.sonarsource.api.plugin</groupId>
            <artifactId>sonar-plugin-api</artifactId>
            <version>${sonar.plugin.api.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.9</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.sonarsource.java</groupId>
            <artifactId>sonar-java-plugin</artifactId>
            <type>sonar-plugin</type>
            <version>${sonar.java.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.sonarsource.analyzer-commons</groupId>
            <artifactId>sonar-analyzer-commons</artifactId>
            <version>2.7.0.1482</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>

        <!-- TEST sources dependencies -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.8</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.sonarsource.java</groupId>
            <artifactId>java-checks-testkit</artifactId>
            <version>${sonar.java.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- version to be specified manually -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.1</version>
            <scope>test</scope>
        </dependency>

        <!-- version to be specified manually -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-migrationsupport</artifactId>
            <version>5.11.1</version>
            <scope>test</scope>
        </dependency>

        <!-- version to be specified manually -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.26.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
                <artifactId>sonar-packaging-maven-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <pluginKey>java-custom-rules</pluginKey>
                    <pluginName>Java Custom Rules</pluginName>
                    <pluginClass>org.example.CustomRulesPlugin</pluginClass>
                    <sonarLintSupported>true</sonarLintSupported>
                    <skipDependenciesPackaging>true</skipDependenciesPackaging>
                    <pluginApiMinVersion>10.2.0.1908</pluginApiMinVersion>
                    <requirePlugins>java:${sonar.java.version}</requirePlugins>
                    <requiredForLanguages>java</requiredForLanguages>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration />
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>